implemented delete hangout feature
