# services/hangout/internal/router/router.go
@@ -31,4 +31,5 @@ func NewRouter(e *echo.Echo, cfg *config.Config, responseBuilder *response.Build
 	hangoutRoutes.POST("/", hangoutHandler.CreateHangout)
 	hangoutRoutes.PUT("/:hangout_id", hangoutHandler.UpdateHangout)
 	hangoutRoutes.GET("/:hangout_id", hangoutHandler.GetHangoutByID)
+	hangoutRoutes.DELETE("/:hangout_id", hangoutHandler.DeleteHangout)
 }
